--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,27 +10,50 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/login_id"
-            android:layout_width="300dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
-            android:hint="아이디" />
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/sign_up_id"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:hint="아이디" />
+
+            <Button
+                android:id="@+id/sign_up_idCheck"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:onClick="idCheck"
+                android:text="중복확인" />
+
+        </LinearLayout>
 
         <EditText
-            android:id="@+id/login_password"
+            android:id="@+id/sign_up_password"
             android:layout_width="300dp"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
-            android:inputType="textPassword"
-            android:hint="비밀번호" />
+            android:hint="비밀번호"
+            android:inputType="textPassword" />
+
 
         <EditText
-            android:id="@+id/login_people"
+            android:id="@+id/sign_up_name"
             android:layout_width="300dp"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
-            android:hint="인원"
+            android:hint="이름" />
+
+        <EditText
+            android:id="@+id/sign_up_phone"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:hint="전화번호"
             android:inputType="number" />
 
         <LinearLayout
@@ -40,20 +63,20 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/login_sign_in"
+                android:id="@+id/sign_up_make"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:onClick="SignIn"
-                android:text="로그인" />
+                android:onClick="make"
+                android:text="가입" />
 
             <Button
-                android:id="@+id/login_sign_up"
+                android:id="@+id/sign_up_cancel"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:onClick="SignUp"
-                android:text="회원가입 " />
+                android:onClick="cancel"
+                android:text="취소" />
         </LinearLayout>
     </LinearLayout>
 
