--- a/app/src/main/res/layout/frag_person.xml
+++ b/app/src/main/res/layout/frag_person.xml
@@ -35,27 +35,30 @@
 
                 <TextView
                     android:id="@+id/person_user_name"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
-                    android:text="사용자 이름"
-                    android:textSize="20dp" />
+                    android:textColor="@android:color/black"
+                    tools:text="사용자 이름"
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/person_user_number"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
-                    android:text="전화번호"
-                    android:textSize="20dp" />
+                    android:textColor="@android:color/black"
+                    tools:text="전화번호"
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/person_user_people"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
-                    android:text="인원"
-                    android:textSize="20dp" />
+                    android:textColor="@android:color/black"
+                    tools:text="인원"
+                    android:textSize="20sp" />
 
             </LinearLayout>
         </LinearLayout>
@@ -67,6 +70,7 @@
             android:clickable="true"
             android:gravity="center_vertical"
             android:text="찜"
+            android:textColor="@android:color/black"
             android:textSize="24sp" />
 
         <TextView
@@ -76,6 +80,7 @@
             android:clickable="true"
             android:gravity="center_vertical"
             android:text="알림"
+            android:textColor="@android:color/black"
             android:textSize="24sp" />
 
         <TextView
@@ -85,6 +90,7 @@
             android:clickable="true"
             android:gravity="center_vertical"
             android:text="내정보 관리"
+            android:textColor="@android:color/black"
             android:textSize="24sp" />
 
 
