--- a/app/src/main/res/layout/frag_store_info.xml
+++ b/app/src/main/res/layout/frag_store_info.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingTop="4dp"
     android:paddingBottom="4dp">
 
@@ -41,7 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
-                    android:text="가게 이름"
+                    tools:text="가게 이름"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
 
@@ -50,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
-                    android:text="가게 전화번호"
+                    tools:text="가게 전화번호"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
 
@@ -59,7 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
-                    android:text="가게 주소"
+                    tools:text="가게 주소"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
             </LinearLayout>
@@ -85,7 +86,7 @@
                 android:id="@+id/store_info_intro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="가게 설명 부분"
+                tools:text="가게 설명 부분"
                 android:textColor="@android:color/black"
                 android:textSize="15sp" />
         </LinearLayout>
@@ -129,7 +130,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:text="메뉴 이름"
+                        tools:text="메뉴 이름"
                         android:textColor="@android:color/black"
                         android:textSize="15sp" />
 
@@ -138,7 +139,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:text="가격"
+                        tools:text="가격"
                         android:textColor="@android:color/black"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -164,7 +165,7 @@
                     android:layout_marginLeft="4dp"
                     android:layout_marginRight="4dp"
                     android:gravity="center"
-                    android:text="대기 인원"
+                    android:text="@string/store_info_wait_people"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -174,18 +175,19 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="숫자"
+                    tools:text="숫자"
                     android:textColor="@android:color/black" />
 
             </LinearLayout>
 
             <Button
-                android:id="@+id/store_info_btn"
+                android:id="@+id/store_info_waitBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:text="순서표 뽑기" />
+                android:textColor="@android:color/black"
+                android:text="@string/store_info_wait_btn" />
 
         </LinearLayout>
     </LinearLayout>
