--- a/app/src/main/res/layout/frag_booking_listitem.xml
+++ b/app/src/main/res/layout/frag_booking_listitem.xml
@@ -34,7 +34,17 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:layout_gravity="left"
+            android:textColor="@android:color/black"
             tools:text="가게 이름" />
+
+
+        <TextView
+            android:id="@+id/phone_listView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:textColor="@android:color/black"
+            tools:text="번호 / 예약" />
 
         <TextView
             android:id="@+id/address_listView"
@@ -42,19 +52,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:layout_gravity="left"
+            android:textColor="@android:color/black"
             tools:text="가게 주소" />
-
-        <TextView
-            android:id="@+id/reservation_listView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            tools:text="번호 / 예약" />
-
     </LinearLayout>
 
     <Button
-        android:id="@+id/reservation_btn"
+        android:id="@+id/reservation_cancel_btn"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
