--- a/app/src/main/res/layout/frag_booking_listitem.xml
+++ b/app/src/main/res/layout/frag_booking_listitem.xml
@@ -20,12 +20,12 @@
         android:src="@drawable/jari_loding" />
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_weight="8"
-        android:gravity="center_vertical"
+        android:layout_gravity="center"
         android:orientation="vertical" >
 
         <TextView
@@ -42,6 +42,7 @@
             android:id="@+id/phone_listView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
             android:layout_gravity="left"
             android:textColor="@android:color/black"
             tools:text="번호 / 예약" />
@@ -58,8 +59,8 @@
 
     <Button
         android:id="@+id/reservation_cancel_btn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="2"
         android:text="취소" />
